--- a/db/config.json
+++ b/db/config.json
@@ -1,3 +1,3 @@
-{
-    "uri": "mongodb://admin:123456789@localhost:27017/admin"
+{    
+    "uri": "mongodb://admin:123456789@coolme.me:27017/admin"
 }
