--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node13",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
@@ -13,8 +13,7 @@
   "dependencies": {
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
-    "mongodb": "^3.6.0",
-    "ws": "^7.3.1"
+    "mongodb": "^3.6.0"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.1",
